--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,15 @@
     </dependency>
   </dependencies>
   <build>
+    <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <configuration>
+      <forkCount>3</forkCount>
+      <reuseForks>true</reuseForks>
+      <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+    </configuration>
+    </plugin>
     <finalName>java-hello-world</finalName>
   </build>
 </project>
