--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </dependency>
   </dependencies>
   <build>
+    <plugins>
     <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
@@ -25,6 +26,7 @@
       <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
     </configuration>
     </plugin>
+    </plugins>
     <finalName>java-hello-world</finalName>
   </build>
 </project>
